# rust-autoclicker

./: Cargo.toml  LICENSE  README.md  build.sh
src/: autoclicker.rs  lib.rs  main.rs  singletonbuilder.rs
